project(concer_traffic_v22)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
SET(CMAKE_BUILD_TYPE DEBUG)
set("OpenCV_DIR" "/usr/local/share/OpenCV")
#set("OpenCV_DIR" "/usr/local2/share/OpenCV")
find_package( OpenCV REQUIRED )
aux_source_directory(. SRC_LIST)
add_executable(${PROJECT_NAME} ${SRC_LIST})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} )
